# BarcodeScanner

./: README.md
client/: .env  AddItemScreen.tsx  App.tsx  CheckoutScreen.tsx  HistoryScreen.tsx  README.md  app.config.js  app.json  modeApp.tsx  package-lock.json  package.json  variables_config.tsx
client/SCAN_CODEs/: README
server/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  dev.db  docker-compose.yml  pyproject.toml
server/src/: main.py
server/src/core/: __init__.py  database.py  exceptions.py
server/src/core/customers/: controllers.py  models.py  routes.py  schemas.py
server/src/core/items/: controllers.py  models.py  routes.py  schemas.py
server/src/core/payments/: controllers.py  models.py  routes.py  schemas.py
